# qual-gate

./: .claudeignore  .gitignore  CHANGELOG.md  LICENSE  README.md  ROADMAP-v2.md  ROADMAP.md  VISION.md  instrument.example.yaml  instrument.schema.yaml  project-profile.example.yaml  project-profile.schema.yaml
.claude/decisions/: 002-v2-strategic-decisions.md
cli/: __main__.py  pyproject.toml  resolve_profile.py  validate_instrument.py
docs/: getting-started.md  instrument-authoring-guide.md  project-profile-reference.md
instruments/: fixes-content-standard.md  glossary-allowlist.txt  glossary-linter.sh  glossary-terms.example.yaml
instruments/ai-ml-tomographe/: README.md  config.yaml  instrument.yaml
instruments/architecture-tomographe/: README.md  config.yaml  instrument.yaml
instruments/code-tomographe/: README.md  config.yaml  instrument.yaml
instruments/compliance-tomographe/: README.md  config.yaml  instrument.yaml
instruments/data-tomographe/: README.md  config.yaml  instrument.yaml
instruments/dependency-tomographe/: README.md  config.yaml  instrument.yaml
instruments/deployment-tomographe/: README.md  config.yaml  instrument.yaml
instruments/documentation-tomographe/: README.md  config.yaml  instrument.yaml
instruments/observability-tomographe/: README.md  config.yaml  instrument.yaml
instruments/performance-tomographe/: README.md  config.yaml  instrument.yaml
instruments/security-tomographe/: README.md  config.yaml  instrument.yaml
output/: .gitignore
qualitoscope/: README.md  config.yaml
tests/: conftest.py
(+252 files in other folders)
